added file paths for header buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <header>
-        <h1>DermaScope</h1>
+        <nav class="navbar">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="DermaScope Logo">
+            </a>
+            <ul class="nav-links">
+                <li><a href="llm.html">LLM</a></li>
+                <li><a href="lesions.html">Lesions</a></li>
+                <li><a href="index.html" class="home-btn">Home</a></li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
