corrected index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,16 @@
 <body>
     <header>
         <nav class="navbar">
+            <!-- Logo aligned to the left -->
             <a href="index.html" class="logo">
                 <img src="logo.png" alt="DermaScope Logo">
             </a>
+
+            <!-- Navigation links aligned to the right -->
             <ul class="nav-links">
-                <li><a href="llm.html">LLM</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="lesions.html">Lesions</a></li>
-                <li><a href="index.html" class="home-btn">Home</a></li>
+                <li><a href="llm.html">LLM</a></li>
             </ul>
         </nav>
     </header>
