--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,15 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><a href="#">CodingNinja</a></div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images.jpeg" alt="DermaScope Logo">
+                </a>
+            </div>            
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <button><a href="#">SignIn</a></button>
-                <button><a href="#">SignUp</a></button>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="lesions.html">Lesions</a></li>
+                <li><a href="llm.html">LLM</a></li>
             </ul>
         </div>
     </nav>
