finished header on index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,17 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Navigation Bar</title>
+    <title>Durma Scope</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="images.jpeg" alt="DermaScope Logo">
-                </a>
-            </div>            
+            <div class="logo"> <a href="index.html"> <img src="images.jpeg" alt="DermaScope Logo"> </a> </div>            
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="lesions.html">Lesions</a></li>
