--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="lesions.html">Lesions</a></li>
                     <li class="nav-item"><a class="nav-link" href="llm.html">LLM</a></li>
+                    <li class="nav-item"><a class="nav-link" href="results.html">Results (For testing)</a></li>
                 </ul>
             </div>
         </div>
