--- a/frontend/results.html
+++ b/frontend/results.html
@@ -27,7 +27,6 @@
                   <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                   <li class="nav-item"><a class="nav-link" href="lesions.html">Lesions</a></li>
                   <li class="nav-item"><a class="nav-link" href="llm.html">LLM</a></li>
-                  <li class="nav-item"><a class="nav-link" href="results.html">Results (For testing)</a></li>
               </ul>
           </div>
       </div>
@@ -36,6 +35,12 @@
   <!-- Results Container -->
   <div class="container mt-5 pt-5 text-center">
       <h1>Diagnosis Results</h1>
+
+      <!-- Toggle Switch for Detailed vs Simplified Mode -->
+      <div class="form-check form-switch mt-4">
+          <input class="form-check-input" type="checkbox" id="diagnosisToggle">
+          <label class="form-check-label" for="diagnosisToggle">Patient Mode</label>
+      </div>
 
       <div class="mt-4">
           <h2>Diagnosis</h2>
@@ -50,6 +55,27 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+      // Example data (Replace this with real data from your API)
+      const detailedDiagnosis = "This is a detailed diagnosis meant for a doctor. It includes medical terminology, lesion classification, potential biopsy recommendations, and differential diagnoses.";
+      const simplifiedDiagnosis = "This is a simplified diagnosis meant for a patient. It explains the condition in simple terms and suggests next steps.";
+
+      // Toggle functionality
+      document.getElementById("diagnosisToggle").addEventListener("change", function() {
+          const diagnosisBox = document.getElementById("diagnosisResult");
+          if (this.checked) {
+              diagnosisBox.value = detailedDiagnosis;
+              this.nextElementSibling.innerText = "Doctor Mode";
+          } else {
+              diagnosisBox.value = simplifiedDiagnosis;
+              this.nextElementSibling.innerText = "Patient Mode";
+          }
+      });
+
+      // Set default diagnosis to simplified
+      document.getElementById("diagnosisResult").value = simplifiedDiagnosis;
+  </script>
 
 </body>
 </html>
