--- a/frontend/results.html
+++ b/frontend/results.html
@@ -10,6 +10,19 @@
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+  <style>
+      .mode-label {
+          font-size: 1.2rem;
+          font-weight: bold;
+          padding: 5px 15px;
+          border-radius: 5px;
+          cursor: pointer;
+      }
+      .active-mode {
+          background-color: #007bff;
+          color: white;
+      }
+  </style>
 </head>
 <body>
 
@@ -36,10 +49,11 @@
   <div class="container mt-5 pt-5 text-center">
       <h1>Diagnosis Results</h1>
 
-      <!-- Toggle Switch for Detailed vs Simplified Mode -->
-      <div class="form-check form-switch mt-4">
-          <input class="form-check-input" type="checkbox" id="diagnosisToggle">
-          <label class="form-check-label" for="diagnosisToggle">Patient Mode</label>
+      <!-- Clickable Mode Switch -->
+      <div class="mt-4 d-flex justify-content-center align-items-center">
+          <span id="doctorLabel" class="mode-label active-mode" onclick="switchMode('doctor')">Doctor Mode</span>
+          <span class="mx-2">|</span>
+          <span id="patientLabel" class="mode-label" onclick="switchMode('patient')">Patient Mode</span>
       </div>
 
       <div class="mt-4">
@@ -57,24 +71,28 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-      // Example data (Replace this with real data from your API)
+      // Example data (Replace with real API results)
       const detailedDiagnosis = "This is a detailed diagnosis meant for a doctor. It includes medical terminology, lesion classification, potential biopsy recommendations, and differential diagnoses.";
       const simplifiedDiagnosis = "This is a simplified diagnosis meant for a patient. It explains the condition in simple terms and suggests next steps.";
 
-      // Toggle functionality
-      document.getElementById("diagnosisToggle").addEventListener("change", function() {
+      function switchMode(mode) {
           const diagnosisBox = document.getElementById("diagnosisResult");
-          if (this.checked) {
+          const doctorLabel = document.getElementById("doctorLabel");
+          const patientLabel = document.getElementById("patientLabel");
+
+          if (mode === "doctor") {
               diagnosisBox.value = detailedDiagnosis;
-              this.nextElementSibling.innerText = "Doctor Mode";
+              doctorLabel.classList.add("active-mode");
+              patientLabel.classList.remove("active-mode");
           } else {
               diagnosisBox.value = simplifiedDiagnosis;
-              this.nextElementSibling.innerText = "Patient Mode";
+              patientLabel.classList.add("active-mode");
+              doctorLabel.classList.remove("active-mode");
           }
-      });
+      }
 
-      // Set default diagnosis to simplified
-      document.getElementById("diagnosisResult").value = simplifiedDiagnosis;
+      // Set default mode to Doctor
+      switchMode("doctor");
   </script>
 
 </body>
