--- a/frontend/results.html
+++ b/frontend/results.html
@@ -56,14 +56,35 @@
           <span id="patientLabel" class="mode-label" onclick="switchMode('patient')">Patient Mode</span>
       </div>
 
-      <div class="mt-4">
-          <h2>Diagnosis</h2>
-          <textarea id="diagnosisResult" class="form-control text-center" rows="5" readonly>Loading diagnosis...</textarea>
+      <!-- Doctor Mode Sections -->
+      <div id="doctorSections">
+          <div class="mt-4">
+              <h2>Diagnosis</h2>
+              <textarea id="doctorDiagnosis" class="form-control text-center" rows="5" readonly>Loading diagnosis...</textarea>
+          </div>
+
+          <div class="mt-4">
+              <h2>Diagnosis Reason</h2>
+              <textarea id="diagnosisReason" class="form-control text-center" rows="5" readonly>Loading reasoning...</textarea>
+          </div>
+
+          <div class="mt-4">
+              <h2>Patient Report</h2>
+              <textarea id="patientReport" class="form-control text-center" rows="5" readonly>Generating patient report...</textarea>
+          </div>
       </div>
 
-      <div class="mt-4">
-          <h2>Treatment</h2>
-          <textarea id="treatmentResult" class="form-control text-center" rows="5" readonly>Loading treatment recommendations...</textarea>
+      <!-- Patient Mode Sections -->
+      <div id="patientSections" style="display: none;">
+          <div class="mt-4">
+              <h2>Diagnosis</h2>
+              <textarea id="patientDiagnosis" class="form-control text-center" rows="5" readonly>Loading diagnosis...</textarea>
+          </div>
+
+          <div class="mt-4">
+              <h2>Treatment Plan</h2>
+              <textarea id="treatmentPlan" class="form-control text-center" rows="5" readonly>Loading treatment plan...</textarea>
+          </div>
       </div>
   </div>
 
@@ -71,23 +92,42 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-      // Example data (Replace with real API results)
-      const detailedDiagnosis = "This is a detailed diagnosis meant for a doctor. It includes medical terminology, lesion classification, potential biopsy recommendations, and differential diagnoses.";
-      const simplifiedDiagnosis = "This is a simplified diagnosis meant for a patient. It explains the condition in simple terms and suggests next steps.";
+      // Example data (Replace with actual GPT-generated responses)
+      const doctorDiagnosis = "This is a detailed medical diagnosis, including lesion classification and potential biopsy recommendations.";
+      const diagnosisReason = "Medical justification based on observed lesion patterns, risk factors, and differential diagnosis.";
+      const patientReport = "A structured report containing key findings, recommendations, and suggested next steps for the patient.";
+
+      const patientDiagnosis = "A simplified explanation of the condition for the patient.";
+      const treatmentPlan = "A step-by-step treatment plan for the patient, including medications, home care, and follow-up recommendations.";
 
       function switchMode(mode) {
-          const diagnosisBox = document.getElementById("diagnosisResult");
           const doctorLabel = document.getElementById("doctorLabel");
           const patientLabel = document.getElementById("patientLabel");
 
+          const doctorSections = document.getElementById("doctorSections");
+          const patientSections = document.getElementById("patientSections");
+
           if (mode === "doctor") {
-              diagnosisBox.value = detailedDiagnosis;
+              doctorSections.style.display = "block";
+              patientSections.style.display = "none";
+
               doctorLabel.classList.add("active-mode");
               patientLabel.classList.remove("active-mode");
+
+              // Update content
+              document.getElementById("doctorDiagnosis").value = doctorDiagnosis;
+              document.getElementById("diagnosisReason").value = diagnosisReason;
+              document.getElementById("patientReport").value = patientReport;
           } else {
-              diagnosisBox.value = simplifiedDiagnosis;
+              doctorSections.style.display = "none";
+              patientSections.style.display = "block";
+
               patientLabel.classList.add("active-mode");
               doctorLabel.classList.remove("active-mode");
+
+              // Update content
+              document.getElementById("patientDiagnosis").value = patientDiagnosis;
+              document.getElementById("treatmentPlan").value = treatmentPlan;
           }
       }
 
