--- a/frontend/results.html
+++ b/frontend/results.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-              <img src="images.jpeg" alt="DermaScope Logo" height="50">
+              <img src="logo.png" alt="DermaScope Logo" height="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
               <span class="navbar-toggler-icon"></span>
