--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,28 +13,19 @@
 </head>
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="images.jpeg" alt="DermaScope Logo" height="50">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="lesions.html">Lesions</a></li>
-                    <li class="nav-item"><a class="nav-link" href="llm.html">LLM</a></li>
-                    <li class="nav-item"><a class="nav-link" href="results.html">Results (For testing)</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <!-- Bootstrap JS (CDN) - Required for Navbar Toggle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <div id="navbar-container"></div>
+    <script>
+        async function loadNavbar() {
+            const response = await fetch("navbar.html");
+            const navbarHTML = await response.text();
+            document.getElementById("navbar-container").innerHTML = navbarHTML;
+        }
+        loadNavbar();
+    </script>
 
 </body>
 </html>
