--- a/frontend/lesions.html
+++ b/frontend/lesions.html
@@ -14,26 +14,6 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-              <img src="logo.png" alt="DermaScope Logo" height="50">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto">
-                  <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="lesions.html">Lesions</a></li>
-                  <li class="nav-item"><a class="nav-link" href="llm.html">LLM</a></li>
-                  <li class="nav-item"><a class="nav-link" href="results.html">Results (For testing)</a></li>
-              </ul>
-          </div>
-      </div>
-  </nav>
-
   <!-- Form Container (Added margin-top to prevent overlap with fixed navbar) -->
   <div class="container form-container mt-5 pt-5">
       <h1 class="text-center">Skin Lesion Diagnosis Form</h1>
@@ -100,6 +80,16 @@
       sendDiagnosisData(imageFile, "", "", "", "", "")
     });
   </script>
+
+    <div id="navbar-container"></div>
+    <script>
+        async function loadNavbar() {
+            const response = await fetch("navbar.html");
+            const navbarHTML = await response.text();
+            document.getElementById("navbar-container").innerHTML = navbarHTML;
+        }
+        loadNavbar();
+    </script>
 
 </body>
 </html>
