--- a/frontend/results.html
+++ b/frontend/results.html
@@ -26,6 +26,8 @@
 </head>
 <body>
 
+  <div id="navbar-container"></div>
+
   <!-- Results Container -->
   <div class="container mt-5 pt-5 text-center">
       <h1>Diagnosis Results</h1>
@@ -73,7 +75,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-      // Example data (Replace with actual GPT-generated responses)
+      // These values should be replaced by your actual GPT-generated responses.
       const doctorDiagnosis = "This is a detailed medical diagnosis, including lesion classification and potential biopsy recommendations.";
       const diagnosisReason = "Medical justification based on observed lesion patterns, risk factors, and differential diagnosis.";
       const patientReport = "A structured report containing key findings, recommendations, and suggested next steps for the patient.";
@@ -95,10 +97,11 @@
               doctorLabel.classList.add("active-mode");
               patientLabel.classList.remove("active-mode");
 
-              // Update content
-              document.getElementById("doctorDiagnosis").value = doctorDiagnosis;
-              document.getElementById("diagnosisReason").value = diagnosisReason;
-              document.getElementById("patientReport").value = patientReport;
+              // Update content using your stored diagnosis data (if available)
+              const diagnosisData = JSON.parse(localStorage.getItem("diagnosisData"));
+              document.getElementById("doctorDiagnosis").value = diagnosisData ? diagnosisData[0] : doctorDiagnosis;
+              document.getElementById("diagnosisReason").value = diagnosisData ? diagnosisData[1] : diagnosisReason;
+              document.getElementById("patientReport").value = diagnosisData ? diagnosisData[2] : patientReport;
           } else {
               doctorSections.style.display = "none";
               patientSections.style.display = "block";
@@ -106,25 +109,24 @@
               patientLabel.classList.add("active-mode");
               doctorLabel.classList.remove("active-mode");
 
-              // Update content
-              document.getElementById("patientDiagnosis").value = patientDiagnosis;
-              document.getElementById("treatmentPlan").value = treatmentPlan;
+              // Update content using your stored diagnosis data (if available)
+              const diagnosisData = JSON.parse(localStorage.getItem("diagnosisData"));
+              document.getElementById("patientDiagnosis").value = diagnosisData ? diagnosisData[3] : patientDiagnosis;
+              document.getElementById("treatmentPlan").value = diagnosisData ? diagnosisData[4] : treatmentPlan;
           }
       }
 
       // Set default mode to Doctor
       switchMode("doctor");
-  </script>
 
-<div id="navbar-container"></div>
-<script>
-    async function loadNavbar() {
-        const response = await fetch("navbar.html");
-        const navbarHTML = await response.text();
-        document.getElementById("navbar-container").innerHTML = navbarHTML;
-    }
-    loadNavbar();
-</script>
+      // Load the navbar from an external file (navbar.html)
+      async function loadNavbar() {
+          const response = await fetch("navbar.html");
+          const navbarHTML = await response.text();
+          document.getElementById("navbar-container").innerHTML = navbarHTML;
+      }
+      loadNavbar();
+  </script>
 
 </body>
 </html>
