slight changes to frontend form

--- a/frontend/lesions.html
+++ b/frontend/lesions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skin Lesion Assessment Form</title>
+    <title>Skin Lesion Diagnosis Form</title>
     
 
     <link rel="stylesheet" href="lesions.css">
@@ -20,7 +20,7 @@
     <div class="container-2">
         <div class="card">
             <div class="card-header">
-                <h2>Skin Lesion Assessment Form</h2>
+                <h2>Skin Lesion Diagnosis Form</h2>
                 <p>Please provide information about the skin lesion for medical evaluation.</p>
             </div>
 
@@ -92,7 +92,7 @@
 
                 <!-- Form Buttons -->
                 <div class="card-footer">
-                    <button type="submit" onclick="resetForm()">Cancel</button>
+                    <button type="button" onclick="resetForm()">Reset</button>
                     <button type="submit">Submit Assessment</button>
                 </div>
             </form>
