--- a/frontend/navbar.html
+++ b/frontend/navbar.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html" target="_top">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="lesions.html" target="_top">Lesions</a></li>
+                        <li class="nav-item"><a class="nav-link" href="lesions.html" target="_top">Lesion Diagnosis</a></li>
                     </ul>
                 </div>
             </div>
