--- a/frontend/results.html
+++ b/frontend/results.html
@@ -1,156 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Diagnosis Results</title>
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* Mode Switch Label Styles */
-    .mode-label {
-        font-size: 1.2rem;
-        font-weight: bold;
-        padding: 5px 15px;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    .active-mode {
-        background-color: #007bff;
-        color: white;
-    }
-
-    /* Diagnosis Box Styles */
-    .diagnosis-box {
-        background-color: #f8f9fa;
-        border: 1px solid var(--primary-color);
-        border-radius: 4px;
-        padding: 10px;
-        text-align: left;
-        white-space: pre-wrap; /* Preserve formatting and wrap text */
-        overflow: hidden; /* Remove scrollbars */
-        min-height: 100px; /* Adjust as needed */
-        font-size: 1rem;
-        color: var(--text-color);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Patient Diagnosis Information</title>
+    <link rel="stylesheet" href="results.css">
 </head>
 <body>
+    <div id="navbar-container">
+        <iframe src="navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
+    </div>
 
-  <div id="navbar-container"></div>
+    <main class="container">
+        <header>
+            <h1>Patient Diagnosis Information</h1>
+            <p>View detailed diagnosis information for medical professionals and patients</p>
+        </header>
 
-  <!-- Results Container -->
-  <div class="container mt-5 pt-5">
-      <h1 class="text-center">Diagnosis Results</h1>
+        <div class="tabs">
+            <button class="tab-button active" data-tab="doctor">
+                Doctor View
+            </button>
+            <button class="tab-button" data-tab="patient">
+                Patient View
+            </button>
+        </div>
 
-      <!-- Clickable Mode Switch -->
-      <div class="mt-4 d-flex justify-content-center align-items-center">
-          <span id="doctorLabel" class="mode-label active-mode" onclick="switchMode('doctor')">Doctor Mode</span>
-          <span id="patientLabel" class="mode-label" onclick="switchMode('patient')">Patient Mode</span>
-      </div>
+        <div id="doctor-view" class="tab-content active">
+            <div class="card">
+                <div class="card-header doctor-header">
+                    <h2>
+                        Medical Professional Information
+                    </h2>
+                </div>
+                <div class="card-content">
+                    <div class="form-group info-section">
+                        <h3>Diagnosis</h3>
+                        <textarea id="diagnosis" placeholder="Enter detailed diagnosis information"></textarea>
+                    </div>
+                    <div class="form-group info-section">
+                        <h3>Prognosis</h3>
+                        <textarea id="prognosis" placeholder="Enter prognosis details"></textarea>
+                    </div>
+                    <div class="form-group info-section">
+                        <h3>Medical Report</h3>
+                        <textarea id="medical-report" placeholder="Enter comprehensive medical report"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-      <!-- Doctor Mode Sections -->
-      <div id="doctorSections" class="mt-4">
-          <div class="mt-4">
-              <h2 class="text-center">Diagnosis</h2>
-              <div id="doctorDiagnosis" class="form-control diagnosis-box" readonly>
-                  Loading diagnosis...
-              </div>
-          </div>
+        <div id="patient-view" class="tab-content">
+            <div class="card">
+                <div class="card-header doctor-header">
+                    <h2>
+                        Patient Information
+                    </h2>
+                </div>
+                <div class="card-content">
+                    <div class="form-group info-section">
+                        <h3>Diagnosis</h3>
+                        <textarea id="laymen-diagnosis" placeholder="Layman Diagnosis"></textarea>
+                    </div>
+                    <div class="form-group info-section">
+                        <h3>Treatment Plan</h3>
+                        <textarea id="treatment" placeholder="treatment Diagnosis"></textarea>
+                    </div>
+                    <div class="important-note">
+                        <h4>Important Note</h4>
+                        <p>This information is provided as a reference. Always consult with your healthcare provider if you have questions about your diagnosis or treatment plan.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-          <div class="mt-4">
-              <h2 class="text-center">Diagnosis Reason</h2>
-              <div id="diagnosisReason" class="form-control diagnosis-box" readonly>
-                  Loading reasoning...
-              </div>
-          </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+  const tabButtons = document.querySelectorAll(".tab-button")
+  const tabContents = document.querySelectorAll(".tab-content")
 
-          <div class="mt-4">
-              <h2 class="text-center">Patient Report</h2>
-              <div id="patientReport" class="form-control diagnosis-box" readonly>
-                  Generating patient report...
-              </div>
-          </div>
-      </div>
+  tabButtons.forEach((button) => {
+    button.addEventListener("click", () => {
+      const tabName = button.getAttribute("data-tab")
 
-      <!-- Patient Mode Sections -->
-      <div id="patientSections" class="mt-4" style="display: none;">
-          <div class="mt-4">
-              <h2 class="text-center">Diagnosis</h2>
-              <div id="patientDiagnosis" class="form-control diagnosis-box" readonly>
-                  Loading diagnosis...
-              </div>
-          </div>
+      // Update active tab button
+      tabButtons.forEach((btn) => btn.classList.remove("active"))
+      button.classList.add("active")
 
-          <div class="mt-4">
-              <h2 class="text-center">Treatment Plan</h2>
-              <div id="treatmentPlan" class="form-control diagnosis-box" readonly>
-                  Loading treatment plan...
-              </div>
-          </div>
-      </div>
-  </div>
+      // Show corresponding tab content
+      tabContents.forEach((content) => {
+        if (content.id === `${tabName}-view`) {
+          content.classList.add("active")
+        } else {
+          content.classList.remove("active")
+        }
+      })
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        document.querySelectorAll("textarea").forEach((textarea) => {
+            autoResize(textarea); // Adjust on page load
+        });
+    })
+  })
+})
+    </script>
 
-  <script>
-      // These values should be replaced by your actual GPT-generated responses.
-      const doctorDiagnosis = "This is a detailed medical diagnosis, including lesion classification and potential biopsy recommendations.";
-      const diagnosisReason = "Medical justification based on observed lesion patterns, risk factors, and differential diagnosis.";
-      const patientReport = "A structured report containing key findings, recommendations, and suggested next steps for the patient.";
+<script>
+    // These values should be replaced by your actual GPT-generated responses.
+    const doctorDiagnosis = "This is a detailed medical diagnosis, including lesion classification and potential biopsy recommendations.";
+    const diagnosisReason = "Medical justification based on observed lesion patterns, risk factors, and differential diagnosis.";
+    const patientReport = "A structured report containing key findings, recommendations, and suggested next steps for the patient.";
 
-      const patientDiagnosis = "A simplified explanation of the condition for the patient.";
-      const treatmentPlan = "A step-by-step treatment plan for the patient, including medications, home care, and follow-up recommendations.";
+    const patientDiagnosis = "A simplified explanation of the condition for the patient.";
+    const treatmentPlan = "A step-by-step treatment plan for the patient, including medications, home care, and follow-up recommendations.";
 
-      function switchMode(mode) {
-          const doctorLabel = document.getElementById("doctorLabel");
-          const patientLabel = document.getElementById("patientLabel");
+    function switchMode(mode) {
+        const doctorLabel = document.getElementById("doctorLabel");
+        const patientLabel = document.getElementById("patientLabel");
 
-          const doctorSections = document.getElementById("doctorSections");
-          const patientSections = document.getElementById("patientSections");
+        const doctorSections = document.getElementById("doctorSections");
+        const patientSections = document.getElementById("patientSections");
 
-          if (mode === "doctor") {
-              doctorSections.style.display = "block";
-              patientSections.style.display = "none";
+        const diagnosisData = JSON.parse(localStorage.getItem("diagnosisData"));
+        document.getElementById("laymen-diagnosis").textContent = diagnosisData ? diagnosisData[3] : patientDiagnosis;
+        document.getElementById("treatment").textContent = diagnosisData ? diagnosisData[4] : treatmentPlan;
+        document.getElementById("diagnosis").textContent = diagnosisData ? diagnosisData[0] : doctorDiagnosis;
+        document.getElementById("prognosis").textContent = diagnosisData ? diagnosisData[1] : diagnosisReason;
+        document.getElementById("medical-report").textContent = diagnosisData ? diagnosisData[2] : patientReport;
 
-              doctorLabel.classList.add("active-mode");
-              patientLabel.classList.remove("active-mode");
 
-              // Update content using stored diagnosis data (if available)
-              const diagnosisData = JSON.parse(localStorage.getItem("diagnosisData"));
-              document.getElementById("doctorDiagnosis").textContent = diagnosisData ? diagnosisData[0] : doctorDiagnosis;
-              document.getElementById("diagnosisReason").textContent = diagnosisData ? diagnosisData[1] : diagnosisReason;
-              document.getElementById("patientReport").textContent = diagnosisData ? diagnosisData[2] : patientReport;
-          } else {
-              doctorSections.style.display = "none";
-              patientSections.style.display = "block";
+        document.addEventListener("DOMContentLoaded", () => {
+            document.querySelectorAll("textarea").forEach((textarea) => {
+                autoResize(textarea); // Adjust on page load
+            });
+        });
+    }
 
-              patientLabel.classList.add("active-mode");
-              doctorLabel.classList.remove("active-mode");
+    switchMode()
+    </script>
 
-              // Update content using stored diagnosis data (if available)
-              const diagnosisData = JSON.parse(localStorage.getItem("diagnosisData"));
-              document.getElementById("patientDiagnosis").textContent = diagnosisData ? diagnosisData[3] : patientDiagnosis;
-              document.getElementById("treatmentPlan").textContent = diagnosisData ? diagnosisData[4] : treatmentPlan;
-          }
-      }
-
-      // Set default mode to Doctor
-      switchMode("doctor");
-
-      // Load the navbar from an external file (navbar.html)
-      async function loadNavbar() {
-          const response = await fetch("navbar.html");
-          const navbarHTML = await response.text();
-          document.getElementById("navbar-container").innerHTML = navbarHTML;
-      }
-      loadNavbar();
-  </script>
-
+    <script>
+        function autoResize(textarea) {
+    textarea.style.height = "auto"; // Reset height to recalculate
+    textarea.style.height = textarea.scrollHeight + "px"; // Set new height based on content
+}
+    </script>
 </body>
 </html>
