spaced out lesion classification buttons of index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     
     <style>
         .btn-group .btn {
-            margin: 5px;
+            margin: 10px;
         }
         .btn.active {
             background-color: #007bff !important;
@@ -37,13 +37,13 @@
         <h2 class="mt-5">Lesion Classifications</h2>
         
         <!-- Buttons for Lesion Types -->
-        <div class="d-flex flex-wrap justify-content-center mt-3">
+        <div class="d-flex flex-wrap justify-content-center mt-3 gap-3">
             <button class="btn btn-outline-primary" onclick="showDescription(0, this)">Actinic Keratoses and Intraepithelial Carcinoma</button>
             <button class="btn btn-outline-primary" onclick="showDescription(1, this)">Basal Cell Carcinoma</button>
             <button class="btn btn-outline-primary" onclick="showDescription(2, this)">Benign Keratosis-like Lesions</button>
             <button class="btn btn-outline-primary" onclick="showDescription(3, this)">Dermatofibroma</button>
         </div>
-        <div class="d-flex flex-wrap justify-content-center mt-2">
+        <div class="d-flex flex-wrap justify-content-center mt-3 gap-3">
             <button class="btn btn-outline-primary" onclick="showDescription(4, this)">Melanoma</button>
             <button class="btn btn-outline-primary" onclick="showDescription(5, this)">Melanocytic Nevi</button>
             <button class="btn btn-outline-primary" onclick="showDescription(6, this)">Vascular Lesions</button>
