directed user to click buttons for info

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,7 @@
         
         <!-- Lesion Classifications Heading -->
         <h2 class="mt-5">Lesion Classifications</h2>
+        <p class="fs-6 text-muted">Click a classification to learn more.</p>
         
         <!-- Buttons for Lesion Types -->
         <div class="d-flex flex-wrap justify-content-center mt-3 gap-3">
