adding gender other

--- a/frontend/lesions.html
+++ b/frontend/lesions.html
@@ -70,6 +70,9 @@
                     
                             <input type="radio" id="female" name="gender" value="female">
                             <label for="female" class="radio-btn">Female</label>
+
+                            <input type="radio" id="other" name="gender" value="other" />
+                            <label for="other" class="radio-btn">Other</label>
                     
                             <input type="radio" id="other" name="gender" value="Prefer not to say">
                             <label for="other" class="radio-btn">Prefer not to say</label>
